--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: msoriano <msoriano@student.42madrid.com>   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/10/02 00:55:20 by marcela           #+#    #+#              #
-#    Updated: 2023/09/21 17:00:34 by msoriano         ###   ########.fr        #
+#    Created: 2023/12/13 11:33:22 by msoriano          #+#    #+#              #
+#    Updated: 2023/12/13 11:33:23 by msoriano         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,7 @@ SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strle
 	ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c ft_lstiter.c ft_lstlast.c ft_lstmap.c\
 	ft_lstnew.c ft_lstsize.c\
  	ft_printf.c ft_print_hex.c ft_print_ptr.c ft_print_strs.c ft_print_unsigned.c\
-	get_next_line_bonus.c get_next_line_utils_bonus.c
+	get_next_line.c get_next_line_utils.c
 
 OBJS = $(SRCS:.c=.o)
 
